feat: adicionar suporte RabbitMQ e ajustar configurações JPA
Integrar mensageria assíncrona e otimizar configurações do projeto:

Mudanças no pom.xml:
- Adicionar dependência spring-boot-starter-amqp para RabbitMQ
- Incluir Flyway Core para versionamento de banco de dados
- Comentar Flyway MySQL (projeto usa PostgreSQL)
- Adicionar comentários descritivos em todas as dependências

Mudanças no application.properties:
- Desabilitar spring.jpa.show-sql (reduzir logs em produção)
- Comentar configurações Hibernate/MySQL desnecessárias
- Comentar configurações Swagger/OpenAPI (feature futura)
- Manter profile ativo local como padrão

Integração RabbitMQ:
- AMQP starter permite consumir mensagens da fila de emails
- Suporta processamento assíncrono via @RabbitListener
- Desacopla API REST do envio SMTP
- Habilita retry automático e dead letter queues

Flyway Core:
- Prepara infraestrutura para migrations versionadas
- Migrations devem ser criadas em src/main/resources/db/migration
- Pattern: V1__descricao.sql, V2__descricao.sql

Otimizações:
- Logs SQL desabilitados melhoram performance
- Configurações comentadas reduzem poluição do arquivo
- Documentação inline facilita manutenção

A integração com RabbitMQ transforma o microserviço de síncrono
para assíncrono, permitindo alta disponibilidade e processamento
em background sem bloquear requisições HTTP.

Stack: Spring AMQP + RabbitMQ + Flyway + PostgreSQL

--- a/pom.xml
+++ b/pom.xml
@@ -29,24 +29,64 @@
 	<properties>
 		<java.version>21</java.version>
 	</properties>
+	
 	<dependencies>
+		<!-- SPRING DATA JPA - Starter para persistência de dados com JPA e Hibernate -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+		
+		<!-- SPRING MAIL - Fornece suporte para envio de e-mails SMTP (ex: Gmail, Outlook, Amazon SES) -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
+		
+		<!-- SPRING VALIDATION - Suporte a anotações de validação como @NotNull, @NotBlank, @Email, etc. -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
+		
+		<!-- SPRING WEB - Starter MVC para APIs REST, removendo Logback para evitar conflito com Log4j2 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+			<exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-logging</artifactId>
+                </exclusion>
+            </exclusions>
 		</dependency>
+		
+		<!-- LOG4J2 - Substitui o logging padrão do Spring Boot (Logback) por Log4j2 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-log4j2</artifactId>
+		</dependency>
+		
+		<!-- SWAGGER / SPRINGDOC - Gera documentação da API REST (OpenAPI 3) com interface Swagger UI -->
+		<dependency>
+		    <groupId>org.springdoc</groupId>
+		    <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+		    <version>2.3.0</version>
+		</dependency>
+		
+		<!-- FLYWAY CORE - Framework de versionamento de banco de dados (suporte geral) -->
+		<dependency>
+		    <groupId>org.flywaydb</groupId>
+		    <artifactId>flyway-core</artifactId>
+		</dependency>
+		
+		<!-- FLYWAY MYSQL - Driver com recursos específicos do MySQL -->
+		<!-- <dependency>
+		    <groupId>org.flywaydb</groupId>
+		    <artifactId>flyway-mysql</artifactId>
+		</dependency> -->
 
+        <!-- SPRING BOOT DEVTOOLS - Ferramentas para desenvolvimento, como reinício automático e live reload -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -54,23 +94,27 @@
 			<optional>true</optional>
 		</dependency>
 		
+		<!-- SPRING AMQP - Starter para integração com RabbitMQ usando AMQP -->
 		<dependency>
 	      <groupId>org.springframework.boot</groupId>
 	      <artifactId>spring-boot-starter-amqp</artifactId>
 	    </dependency>
 		
+		<!-- POSTGRESQL - Driver JDBC para conexão da aplicação com o banco de dados PostgreSQL -->
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		
+		<!-- LOMBOK - Biblioteca que reduz código boilerplate, gerando automaticamente getters, setters, construtores, equals, hashCode e toString em tempo de compilação -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
 		
+		<!-- SPRING TEST - Starter para testes unitários e de integração com Spring Boot -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
