feat: adicionar Flyway e configurar RabbitMQ no profile de produção
Implementar versionamento de banco e mensageria em ambiente produtivo:

Mudanças no application-prod.properties:
- Configurar Flyway com placeholder-replacement=false
- Habilitar clean do Flyway (spring.flyway.clean-disabled=false)
- Adicionar configurações RabbitMQ via variáveis de ambiente:
  * RABBITMQADDRESS para conexão do broker
  * RABBITMQQUEUE para nome da fila de emails
- Comentar configurações locais do RabbitMQ (host/port/credentials)

Integração Flyway:
- Migrations versionadas garantem consistência do schema
- Validação automática previne drift de banco em produção
- Scripts SQL devem ser criados em src/main/resources/db/migration
- Padrão: V1__descricao_da_migracao.sql

Integração RabbitMQ:
- Desacopla envio de emails via mensageria assíncrona
- RABBITMQADDRESS suporta clusters (ex: amqp://host1,host2)
- Processamento em background via EmailConsumer
- Resiliência com retry automático e dead letter queues

Ambiente de produção:
- Todas as credenciais via variáveis de ambiente
- Logs otimizados (SQL OFF, níveis WARN/ERROR)
- JPA em modo validate (Flyway gerencia schema)
- Swagger desabilitável via propriedades comentadas

A integração com RabbitMQ e Flyway prepara o microserviço para
ambientes de alta disponibilidade, com processamento assíncrono
escalável e versionamento de banco robusto.

Stack: Spring AMQP + RabbitMQ + Flyway + PostgreSQL

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,7 +4,16 @@
 server.port=${PORT:8080}
 
 # ===============================
-# = DATA SOURCE (POSTGRESQL)
+# = LOGGING
+# ===============================
+logging.level.br.com.sistema=INFO
+logging.level.org.springframework.security=WARN
+logging.level.org.hibernate.engine.jdbc.spi.SqlExceptionHelper=ERROR
+logging.level.org.hibernate.SQL=OFF
+logging.level.org.springframework=WARN
+
+# ===============================
+# = DATA SOURCE
 # ===============================
 spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
 spring.datasource.username=${PGUSER}
@@ -14,23 +23,16 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
-# 'update' cria/atualiza as tabelas automaticamente
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
-
-# Dialect específico do PostgreSQL
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 # ===============================
 # = FLYWAY
 # ===============================
-# Executa migrations automaticamente no startup
 spring.flyway.enabled=true
-
-# Ignora placeholders ${...}
 spring.flyway.placeholder-replacement=false
-
-# ATENÇÃO: apenas para estudos/dev
 spring.flyway.clean-disabled=false
 
 # ===============================
@@ -38,11 +40,6 @@ spring.flyway.clean-disabled=false
 # ===============================
 #springdoc.api-docs.enabled=false
 #springdoc.swagger-ui.enabled=false
-
-# ===============================
-# = JWT
-# ===============================
-security.api.token.secret=${JWTSECRETKEY}
 
 # ===============================
 # = SMTP GMAIL
@@ -54,3 +51,17 @@ spring.mail.password=${MAILPASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+# ===============================
+# = RABBITMQ
+# ===============================
+spring.rabbitmq.addresses=${RABBITMQADDRESS}
+spring.rabbitmq.queue=${RABBITMQQUEUE}
+#spring.rabbitmq.host=localhost
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=guest
+#spring.rabbitmq.password=guest
+
+# ===============================
+# = JWT
+# ===============================
+#security.api.token.secret=${JWTSECRETKEY}
