atualizado arquivo application-prod.properties

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -54,12 +54,12 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 # ===============================
 # = RABBITMQ
 # ===============================
-spring.rabbitmq.addresses=${RABBITMQADDRESS}
+#spring.rabbitmq.addresses=${RABBITMQADDRESS}
 spring.rabbitmq.queue=${RABBITMQQUEUE}
-#spring.rabbitmq.host=localhost
-#spring.rabbitmq.port=5672
-#spring.rabbitmq.username=guest
-#spring.rabbitmq.password=guest
+spring.rabbitmq.host=${RABBITMQHOST}
+spring.rabbitmq.port=${RABBITMQPORT}
+spring.rabbitmq.username=${RABBITMQUSERNAME}
+spring.rabbitmq.password=${RABBITMQPASSWORD}
 
 # ===============================
 # = JWT
