atualizado arquivo application-prod.properties

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -54,12 +54,12 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 # ===============================
 # = RABBITMQ
 # ===============================
-#spring.rabbitmq.addresses=${RABBITMQADDRESS}
-spring.rabbitmq.queue=${RABBITMQQUEUE}
-spring.rabbitmq.host=${RABBITMQHOST}
-spring.rabbitmq.port=${RABBITMQPORT}
-spring.rabbitmq.username=${RABBITMQUSERNAME}
-spring.rabbitmq.password=${RABBITMQPASSWORD}
+spring.rabbitmq.host=${RABBITMQ_HOST}
+spring.rabbitmq.port=${RABBITMQ_PORT}
+spring.rabbitmq.username=${RABBITMQ_USERNAME}
+spring.rabbitmq.password=${RABBITMQ_PASSWORD}
+spring.rabbitmq.virtual-host=${RABBITMQ_VHOST:/}
+spring.rabbitmq.queue=${RABBITMQ_QUEUE}
 
 # ===============================
 # = JWT
