--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -23,7 +23,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
